# Probivio

./: .dockerignore  .env.example  .eslintrc.cjs  .firebaserc  .gitignore  .prettierignore  .prettierrc  BashWrkFlow  Final File Inventory  Final Integration  README.md  cloudbuild.yaml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  github.workflow  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proguard-rules.pro  setup_project.sh  tsconfig.base.json  turbo.json
.bolt/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy.yml
@listinglogic/: logger
apps/streamline/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  nginx.conf  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
apps/web/: .env.example  .env.production  .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  (+3 more)
assets/: AssetManager.cpp  AssetManager.h
debug/: DebugRenderer.cpp  DebugRenderer.h
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  MONITORING.md  OPERATIONAL_RUNBOOK.md
main/: GameEngine.h
services/ml-trainer/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ml-trainer/ml_trainer/: __init__.py  config.py  data_loader.py  features.py  model.py  publisher.py  train.py
services/ml-trainer/scripts/: deploy-trainer-job.sh
services/ml-trainer/tests/: test_features.py
states/: LoadingState.cpp  MatchState.cpp  MatchState.h
(+122 files in other folders)
