[project]
name = "ml-trainer"
version = "1.0.0"
description = "Streamline lead scoring model trainer"
requires-python = ">=3.12"
dependencies = [
  "google-cloud-firestore>=2.16.0",
  "google-cloud-storage>=2.14.0",
  "xgboost>=2.0.3",
  "scikit-learn>=1.4.1",
  "numpy>=1.26.4",
  "pandas>=2.2.0",
  "onnx>=1.15.0",
  "onnxmltools>=1.12.0",
  "skl2onnx>=1.16.0",
  "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.2",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]  # Too many arguments — trainers legitimately need many

[tool.mypy]
python_version = "3.12"
strict = true
